--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: python-app-jeff
+  name: python-app
   labels:
-    app: python-app-jeff
+    app: python-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: python-app-jeff
+      app: python-app
   template:
     metadata:
       labels:
-        app: python-app-jeff
+        app: python-app
     spec:
       containers:
-      - name: python-app-jeff
-        image: kittyiv/python-app-jeff:v2
+      - name: python-app
+        image: ricardoandre9707/python-app:v2
         ports:
         - containerPort: 5000
