--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,16 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: python-app-jeff
+  name: python-app
 spec:
   rules:
-  - host: "python-app-jeff.test.com"
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: python-app-jeff
-            port:
-              number: 8080
+  - host: "python-app.test.com"
+    http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: python-app
+              port:
+                number: 8080
