--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: python-app-jeff
+  name: python-app
 spec:
   selector:
-    app: python-app-jeff
+    app: python-app
   ports:
     - protocol: TCP
-      port: 5000
+      port: 8080
       targetPort: 5000
