Fix CI workflow job dependency for cd

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       commit_id: ${{ env.COMMIT_ID }}
 
   cd:
-    needs: ci
+    needs: docker
     runs-on: self-hosted
     steps:
 
@@ -36,14 +36,14 @@ jobs:
       - name: Modify values file
         shell: bash
         run: |
-          echo ${{needs.ci.outputs.commit_id}}
+          echo ${{needs.docker.outputs.commit_id}}
           pip install yq
-          yq -Yi '.image.tag = "${{needs.ci.outputs.commit_id}}"' charts/python-app/values.yaml
+          yq -Yi '.image.tag = "${{needs.docker.outputs.commit_id}}"' charts/python-app/values.yaml
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          message: 'Updates values.yaml with commit ${{needs.ci.outputs.commit_id}}'
+          message: 'Updates values.yaml with commit ${{needs.docker.outputs.commit_id}}'
 
       - name: Install argocd
         shell: bash
