--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      COMMIT_ID: ${{ github.sha }}
     steps:
       -
         name: Login to Docker Hub
