--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,14 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    env:
-      COMMIT_ID: ${{ github.sha }}
+    outputs:
+      commit_id: ${{ steps.vars.outputs.commit_id }}
     steps:
+      -
+        name: Set commit id
+        id: vars
+        shell: bash
+        run: echo "commit_id=${GITHUB_SHA::6}" >> "$GITHUB_OUTPUT"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -24,9 +29,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: kittyiv/python-app-jeff:${{ env.COMMIT_ID }}
-    outputs:
-      commit_id: ${{ env.COMMIT_ID }}
+          tags: kittyiv/python-app-jeff:${{ steps.vars.outputs.commit_id }}
 
   cd:
     needs: docker
