Updates values.yaml with commit c23a73

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: ricardoandre9707/python-app
   pullPolicy: IfNotPresent
-  tag: 93ebca
+  tag: c23a73
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
