Align image repository/tag updates with Docker build output

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -1,6 +1,6 @@
 replicaCount: 1
 image:
-  repository: ricardoandre9707/python-app
+  repository: kittyiv/python-app-jeff
   pullPolicy: IfNotPresent
   tag: 1b9838
 imagePullSecrets: []
