--- a/k8s/runnerdeployment.yaml
+++ b/k8s/runnerdeployment.yaml
@@ -7,6 +7,7 @@ spec:
   replicas: 1
   template:
     spec:
+      serviceAccountName: python-app-jeff-runners
       repository: kittyiv/python-app-jeff
       labels:
         - self-hosted
